eks_bootstraping/namespaces/dashboards-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-dashboards-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    # 1. Route to Grafana Metrics
    - host: grafana.portfolio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80

    # 2. Route to Kibana Logs
    - host: kibana.portfolio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-kibana
                port:
                  number: 5601

    # 3. Route to ArgoCD GitOps (Using the --insecure HTTP mapping we configured)
    - host: argocd.portfolio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
